--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "remark-html": "^11.0.1",
     "sass": "^1.26.3",
     "tailwindcss": "^1.3.4"
+  },
+  "devDependencies": {
+    "@types/node": "^13.13.2",
+    "@types/react": "^16.9.34",
+    "typescript": "^3.8.3"
   }
 }
